
syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "/agentpb";

package agentpb;

// The greeting service definition.
service Agent {
  rpc SubmitJob (JobRequest) returns (JobResponse) {}
  rpc StoreCredential (StoreCredentialRequest) returns (StoreCredentialResponse) {}
  rpc Sync(SyncRequest) returns (SyncResponse) {}

  rpc ClimonAppInstall (ClimonInstallRequest) returns (JobResponse) {}
  rpc ClimonAppDelete (ClimonDeleteRequest) returns (JobResponse) {}

  rpc DeployerAppInstall (ApplicationInstallRequest) returns (JobResponse) {}
  rpc DeployerAppDelete (ApplicationDeleteRequest) returns (JobResponse) {}

  rpc ClusterAdd (ClusterRequest) returns (JobResponse) {}
  rpc ClusterDelete (ClusterRequest) returns (JobResponse) {}

  rpc RepositoryAdd (RepositoryAddRequest) returns (JobResponse) {}
  rpc RepositoryDelete (RepositoryDeleteRequest) returns (JobResponse) {}

  rpc ProjectAdd (ProjectAddRequest) returns (JobResponse) {}
  rpc ProjectDelete (ProjectDeleteRequest) returns (JobResponse) {}

  rpc SyncApp(SyncAppRequest) returns (SyncAppResponse) {}
}

enum StatusCode {
  OK = 0;
  INTERNRAL_ERROR = 1;
  INVALID_ARGUMENT = 2;
  NOT_FOUND = 3;
}

message StoreCredentialRequest {
  string credentialType = 1;
  string credEntityName = 2;
  string credIdentifier = 3;
  map<string, string>  credential = 4;  
}

message StoreCredentialResponse {
  StatusCode status = 1;
  string statusMessage = 2;
}

message SyncRequest {
  string type = 1;
  string data = 2;
}

message SyncResponse {
  string status = 1;
  string message = 2;
}

message ClimonInstallRequest {
  string plugin_name = 1;
  string repo_name = 2;
  string repo_url = 3;
  string chart_name = 4;
  string namespace = 5;
  string release_name = 6;
  uint32 timeout = 7;
  string version = 8;
  string cluster_name = 9;
}

message ClimonDeleteRequest {
  string plugin_name = 1;
  string namespace = 2;
  string release_name = 3;
  uint32 timeout = 4;
  string cluster_name = 5;
}

message ApplicationInstallRequest {
  string plugin_name = 1;
  string repo_name = 2;
  string repo_url = 3;
  string chart_name = 4;
  string namespace = 5;
  string release_name = 6;
  uint32 timeout = 7;
  string version = 8;
  string cluster_name = 9;
}

message ApplicationDeleteRequest {
  string plugin_name = 1;
  string namespace = 2;
  string release_name = 3;
  uint32 timeout = 4;
  string cluster_name = 5;
}

message ClusterRequest {
  string plugin_name = 1;
  string cluster_name = 2;
}

message RepositoryAddRequest {
  string plugin_name = 1;
  string repo_name = 2;
  string repo_url = 3;
}

message RepositoryDeleteRequest {
  string plugin_name = 1;
  string repo_name = 2;
}

message ProjectAddRequest {
  string plugin_name = 1;
  string project_name = 2;
}

message ProjectDeleteRequest {
  string plugin_name = 1;
  string project_name = 2;
}

message JobRequest {
  string operation = 1;
  google.protobuf.Any payload   = 2;
}

message JobResponse {
  string id = 1;
  string runID = 2;
  string workflowName = 3;
}

message SyncAppRequest {
  bytes payload = 1;
}

message SyncAppResponse {
  string status = 1;
}